# whiskey

./: .gitignore  AUTODISCOVERY.md  CLAUDE.md  PHASE_2_1_SUMMARY.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM_SUMMARY.md  README.md  UV_OPTIONAL_PACKAGES.md  ai_extension_audit.md  example.py  example_ioc.py  hello.py  pyproject.toml  test_analysis.md  test_integration.py  test_performance.py
docs/: README.md  advanced.md  api-reference.md  api.md  architecture.md  core-concepts.md  examples.md  extensions.md  getting-started.md  guide.md  migration.md  pythonic_refactor.md  testing.md  (+1 more)
whiskey-ai/: pyproject.toml
whiskey-ai/src/whiskey_ai/: __init__.py  plugin.py  providers.py
whiskey-ai/whiskey_ai/: __init__.py  plugin.py
whiskey-ai/whiskey_ai/context/: __init__.py
whiskey-ai/whiskey_ai/models/: __init__.py  base.py
whiskey-ai/whiskey_ai/models/providers/: __init__.py
whiskey-ai/whiskey_ai/observability/: __init__.py  events.py  metrics.py
whiskey-ai/whiskey_ai/prompts/: registry.py  validators.py
whiskey-ai/whiskey_ai/resources/: __init__.py  manager.py  rate_limiter.py
whiskey-ai/whiskey_ai/streaming/: __init__.py  buffer.py  processor.py
whiskey-asgi/: pyproject.toml
whiskey-asgi/examples/: basic_app.py  builder_example.py  simple_asgi.py  websocket_example.py
whiskey-asgi/src/whiskey_asgi/: __init__.py  app.py  builder.py  extension.py  middleware.py  plugin.py  request.py  response.py  routing.py
whiskey-cli/: README.md  pyproject.toml
whiskey-cli/examples/: cli_example.py  simple_cli.py
whiskey-cli/src/whiskey_cli/: __init__.py  builder.py  extension.py  plugin.py
whiskey-cli/tests/: test_cli_extension.py
whiskey-example-plugin/: pyproject.toml
whiskey-example-plugin/whiskey_example/: __init__.py  events.py  plugin.py  services.py
whiskey_ai/: README.md  REFACTORING_SUMMARY.md  pyproject.toml
whiskey_ai/docs/: CLI.md
whiskey_ai/examples/: agent_example.py  cli_example.py  conversation_example.py  simple_chat.py
whiskey_ai/src/whiskey_ai/: __init__.py  agents.py  cli.py  conversation.py  extension.py  providers.py  scopes.py  tools.py
whiskey_ai/tests/: __init__.py  test_cli.py  test_extension.py  test_managers.py
whiskey_asgi/: README.md  pyproject.toml  pytest.ini
whiskey_asgi/examples/: 00_minimal_example.py  01_basic_api.py  02_middleware_websocket.py  03_advanced_patterns.py  advanced_asgi.py  basic_app.py  simple_asgi.py  websocket_example.py
whiskey_asgi/src/whiskey_asgi/: __init__.py  extension.py  types.py
whiskey_asgi/tests/: __init__.py  test_asgi_handler.py  test_asgi_manager.py  test_extension.py  test_integration.py  test_request.py  test_route_metadata.py  test_websocket.py
whiskey_auth/: README.md  pyproject.toml  pytest.ini
whiskey_auth/examples/: basic_auth.py  jwt_auth.py  testing_auth.py
whiskey_auth/src/whiskey_auth/: __init__.py  core.py  decorators.py  extension.py  middleware.py  password.py  providers.py  testing.py
whiskey_auth/tests/: __init__.py  conftest.py  test_core.py  test_coverage_boost.py  test_decorators.py  test_extension.py  test_integration.py  test_middleware.py  test_providers.py  test_simple_coverage.py  test_testing_utilities.py
whiskey_config/: README.md  pyproject.toml
whiskey_config/examples/: basic_config.py
whiskey_config/src/whiskey_config/: __init__.py  extension.py  manager.py  providers.py  schema.py
whiskey_config/src/whiskey_config/sources/: __init__.py  base.py  env.py  file.py
whiskey_config/tests/: __init__.py  conftest.py  test_extension.py  test_manager.py  test_providers.py  test_schema.py  test_sources.py
whiskey_etl/: ETL_DB_SUMMARY.md  README.md  pyproject.toml
whiskey_etl/examples/: basic_pipeline.py  database_pipeline.py  object_store_pipeline.py
whiskey_etl/src/whiskey_etl/: __init__.py  db_sink.py  db_source.py  errors.py  extension.py  object_store_sink.py  object_store_source.py  pipeline.py  sinks.py  sources.py  sql_transform.py  transforms.py  validation.py  validation_reporting.py
whiskey_etl/tests/: __init__.py  test_db_components.py  test_extension.py  test_object_store.py  test_pipeline.py  test_sinks.py  test_sources.py  test_transforms.py  test_validation.py  test_validation_reporting.py
whiskey_http/: README.md  pyproject.toml
whiskey_http/examples/: auth_example.py  basic_client.py  integration_example.py  interceptors_example.py  retry_circuit_breaker.py
whiskey_http/src/whiskey_http/: __init__.py  extension.py  types.py
whiskey_http/tests/: __init__.py  test_client.py  test_extension.py
whiskey_jobs/: README.md  pyproject.toml
whiskey_jobs/examples/: basic_jobs.py  scheduled_jobs.py
whiskey_jobs/src/whiskey_jobs/: __init__.py  extension.py  job.py  manager.py  queue.py  scheduler.py  types.py  worker.py
whiskey_jobs/tests/: __init__.py  conftest.py  test_extension.py  test_job.py  test_manager.py  test_queue.py  test_scheduler.py  test_types.py  test_worker.py
whiskey_ml/: README.md  pyproject.toml
whiskey_ml/examples/: basic_classification.py  etl_ml_integration.py  event_driven_training.py  scoped_training.py  simple_scoped_training.py  visualized_training.py
whiskey_ml/src/whiskey_ml/: __init__.py  extension.py
whiskey_ml/src/whiskey_ml/components/: scoped_components.py
whiskey_ml/src/whiskey_ml/core/: __init__.py  dataset.py  metrics.py  model.py  pipeline.py  trainer.py
whiskey_ml/src/whiskey_ml/integrations/: __init__.py  base.py  etl.py
whiskey_ml/src/whiskey_ml/visualization/: __init__.py  metrics_tracker.py  progress.py  tensorboard.py
whiskey_ml/tests/: test_basic.py  test_core.py  test_extension.py  test_pipeline.py  test_scopes.py  test_trainer.py  test_visualization_simple.py
whiskey_sql/: README.md  pyproject.toml
whiskey_sql/examples/: basic_usage.py  duckdb_example.py  mysql_example.py  sqlite_example.py
whiskey_sql/src/whiskey_sql/: __init__.py  core.py  exceptions.py  extension.py  types.py
whiskey_sql/src/whiskey_sql/backends/: __init__.py  duckdb.py  mysql.py  postgresql.py  sqlite.py
whiskey_sql/tests/: __init__.py  test_backends.py  test_duckdb_backend.py
(+207 files in other folders)
