[project]
name = "whiskey"
version = "0.1.0"
description = "Next-generation dependency injection and IoC framework for Python AI applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.8.0",
    "aiofiles>=23.2.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
