[project]
name = "whiskey"
version = "0.1.0"
description = "Simple, Pythonic dependency injection for AI applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
ai = ["whiskey-ai"]
web = ["whiskey-asgi"]
cli = ["whiskey-cli"]
all = ["whiskey-ai", "whiskey-asgi", "whiskey-cli"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
]

[tool.uv.workspace]
members = ["whiskey-*"]

[tool.uv.sources]
whiskey-ai = { workspace = true }
whiskey-asgi = { workspace = true }
whiskey-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"whiskey/plugins/base.py" = ["B027"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=whiskey",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests"
]