[project]
name = "whiskey-ai"
version = "0.1.0"
description = "AI/LLM integration plugin for Whiskey framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "whiskey>=0.1.0",
]

# Entry points removed - using extension functions instead

[tool.uv.sources]
whiskey = { workspace = true }

[tool.setuptools.packages.find]
include = ["whiskey_ai*"]