[project]
name = "whiskey-asgi"
version = "0.1.0"
description = "ASGI web framework plugin for Whiskey"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "whiskey>=0.1.0",
]

[project.entry-points."whiskey.plugins"]
asgi = "whiskey_asgi.plugin:ASGIPlugin"

[tool.uv.sources]
whiskey = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"