[project]
name = "whiskey-ai"
version = "0.1.0"
description = "AI/LLM integration extension for Whiskey framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "whiskey>=0.1.0",
]

[project.optional-dependencies]
web = ["whiskey-asgi>=0.1.0"]
cli = ["whiskey-cli>=0.1.0"]
all = ["whiskey-asgi>=0.1.0", "whiskey-cli>=0.1.0"]

# Entry points removed - using extension functions instead

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
whiskey = { workspace = true }
whiskey-asgi = { workspace = true }
whiskey-cli = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]