[project]
name = "whiskey-asgi"
version = "0.1.0"
description = "ASGI web framework extension for Whiskey"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "whiskey>=0.1.0",
]

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.35.0",
]
test = [
    "httpx>=0.28.1",
    "httpx-ws>=0.7.2",
    "websockets>=15.0.1",
]

# Entry points removed - using extension functions instead

[tool.uv.sources]
whiskey = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source_pkgs = ["whiskey_asgi"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/whiskey/src/*",
    "*/whiskey/core/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]