[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whiskey-auth"
version = "0.1.0"
description = "Authentication and authorization extension for Whiskey DI framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Whiskey Contributors" }
]
keywords = ["dependency-injection", "authentication", "authorization", "security", "whiskey"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
dependencies = [
    "whiskey>=0.1.0",
    "argon2-cffi>=23.0.0",  # Password hashing
    "pyjwt>=2.8.0",         # JWT support
]

[tool.uv.sources]
whiskey = { workspace = true }

[project.optional-dependencies]
redis = ["redis>=5.0.0"]  # Redis session storage
oauth = ["httpx>=0.25.0", "authlib>=1.2.0"]  # OAuth support
totp = ["pyotp>=2.9.0"]  # TOTP/2FA support
all = ["whiskey-auth[redis,oauth,totp]"]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/whiskey-framework/whiskey"
Documentation = "https://whiskey-framework.github.io"
Repository = "https://github.com/whiskey-framework/whiskey"
Issues = "https://github.com/whiskey-framework/whiskey/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["whiskey_auth*"]