[project]
name = "whiskey-http"
version = "0.1.0"
description = "HTTP client extension for Whiskey"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "whiskey>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[tool.uv.sources]
whiskey = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]