[project]
name = "whiskey-jobs"
version = "0.1.0"
description = "Background job execution extension for Whiskey"
authors = [
    {name = "Parker Gabel", email = "parkerdgabel@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "whiskey",
    "croniter>=1.3.0",  # For cron scheduling
]

[project.optional-dependencies]
redis = ["redis>=4.5.0"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whiskey_jobs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true