[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whiskey-ml"
version = "0.1.0"
description = "Machine Learning extension for Whiskey dependency injection framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Parker Gabel", email = "parker.d.gabel@gmail.com"},
]
keywords = ["ml", "machine-learning", "dependency-injection", "training", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "whiskey-core>=0.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# ML Framework support
pytorch = ["torch>=2.0.0", "torchvision>=0.15.0", "torchaudio>=2.0.0"]
tensorflow = ["tensorflow>=2.13.0"]
jax = ["jax>=0.4.0", "jaxlib>=0.4.0", "flax>=0.7.0", "optax>=0.1.7"]
sklearn = ["scikit-learn>=1.3.0"]
xgboost = ["xgboost>=2.0.0"]
lightgbm = ["lightgbm>=4.0.0"]

# Integration support
etl = ["whiskey-etl>=0.1.0"]
sql = ["whiskey-sql>=0.1.0"]
jobs = ["whiskey-jobs>=0.1.0"]

# Experiment tracking
mlflow = ["mlflow>=2.8.0"]
wandb = ["wandb>=0.16.0"]
neptune = ["neptune>=1.8.0"]

# Distributed training
distributed = ["ray>=2.8.0", "horovod>=0.28.0"]

# LLM support
llm = [
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
]

# Development
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

# All optional dependencies
all = [
    "whiskey-ml[pytorch,tensorflow,jax,sklearn,xgboost,lightgbm]",
    "whiskey-ml[etl,sql,jobs]",
    "whiskey-ml[mlflow,wandb,neptune]",
    "whiskey-ml[distributed,llm]",
]

[project.urls]
Homepage = "https://github.com/parkerdgabel/whiskey"
Documentation = "https://whiskey.readthedocs.io"
Repository = "https://github.com/parkerdgabel/whiskey"
Issues = "https://github.com/parkerdgabel/whiskey/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whiskey_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.coverage.run]
source = ["whiskey_ml"]
omit = ["*/tests/*", "*/test_*.py"]