[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whiskey-sql"
version = "0.1.0"
description = "Pure SQL templating extension for Whiskey DI framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Whiskey Contributors" }
]
keywords = ["dependency-injection", "sql", "database", "whiskey"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
dependencies = [
    "whiskey>=0.1.0",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.28.0"]
mysql = ["aiomysql>=0.2.0"]
sqlite = ["aiosqlite>=0.19.0"]
all = ["whiskey-sql[postgresql,mysql,sqlite]"]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/whiskey-framework/whiskey"
Documentation = "https://whiskey-framework.github.io"
Repository = "https://github.com/whiskey-framework/whiskey"
Issues = "https://github.com/whiskey-framework/whiskey/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["whiskey_sql*"]